# monado

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CompilerFlags.cmake  README.md
.gitlab-ci/: ci-cmake-build.sh  config.yml
.gitlab-ci/templates/: .gitlab-ci.yml.jinja
.gitlab-ci/windows/: monado_build.ps1
.reuse/: dep5
cmake/: FindCxxAtomics.cmake  FindHIDAPI.cmake  MonadoSetOptions.cmake
doc/: mingwbuild.md
doc/changes/auxiliary/: mr.2309.md  mr.2497.md  mr.2645.md  mr.2681.md
doc/changes/big/: mr.2509.md
doc/changes/compositor/: mr.2315.md
doc/changes/drivers/: mr.2436.md  mr.2460.md  mr.2484.md  mr.2524.md  mr.2737.md
doc/changes/ipc/: mr.2507.md
doc/changes/misc_fixes/: mr.2521.md  mr.2522.md  mr.2523.md
doc/changes/state_trackers/: mr.2507.md
doc/changes/xrt/: mr.2507.md  mr.2520.md  mr.2757.md
doc/example_configs/: calibration_v2.schema.json
scripts/: codespell-project.sh  format-project.sh  generate_oxr_ext_support.py  generate_vk_helpers.py  mapping.imp
src/xrt/: .clang-format
src/xrt/auxiliary/: CMakeLists.txt
src/xrt/auxiliary/allocation/: CMakeLists.txt  a_allocator.c  a_allocator.h
src/xrt/auxiliary/android/: android_ahardwarebuffer_allocator.c  org.freedesktop.monado.auxiliary.cpp  org.freedesktop.monado.auxiliary.hpp  org.freedesktop.monado.auxiliary.impl.hpp
src/xrt/auxiliary/bindings/: bindings.json  bindings.py  bindings.schema.json
src/xrt/auxiliary/d3d/: CMakeLists.txt  d3d_convertible_luid.hpp  d3d_winrt_helpers.cpp  d3d_winrt_helpers.hpp
src/xrt/auxiliary/fixup/: CMakeLists.txt  fixup.c  fixup.h  fixup_list.c  pimax.c  pimax.h  vp2.c  vp2.h
src/xrt/auxiliary/gpu_power_profile/: CMakeLists.txt  gpu_power_profile.c  gpu_power_profile.h
src/xrt/auxiliary/math/: CMakeLists.txt  m_api.h  m_base.cpp  m_imu_xio_ahrs.c  m_imu_xio_ahrs.h  m_mag_calib_nxp.c  m_mag_calib_nxp.h  m_relation_history.cpp
src/xrt/auxiliary/metal/: CMakeLists.txt  mtl_documentation.h  mtl_format.h  mtl_format.m  mtl_image_collection.h  mtl_image_collection.m  mtl_shared_event.h  mtl_shared_event.m  mtl_shared_texture.h  mtl_shared_texture.m
src/xrt/auxiliary/os/: CMakeLists.txt  os_ble.h  os_ble_android.cpp  os_ble_dbus.c  os_ble_stubs.c  os_hid.c  os_hid.h
src/xrt/auxiliary/tracking/: CMakeLists.txt  t_calibration.cpp  t_calibration_opencv.hpp  t_conefitting.cpp  t_conefitting.hpp  t_constellation.h  t_dead_reckoning.c  t_file.cpp  t_imu.cpp  t_imu.h  t_rift_blobwatch.c  t_tracker_psmv.cpp  t_tracker_psvr.cpp  t_tracker_slam.cpp  t_tracking.h
src/xrt/auxiliary/util/: CMakeLists.txt  u_algorithms.hpp  u_builders.c  u_builders.h  u_compositor_ni.c  u_compositor_ni.h  u_device.c  u_extension_list.cpp  u_format.c  u_handles.c  u_interface_helper.hpp  u_metrics.c  u_metrics.h  u_misc.c  u_misc.h  u_native_images.h  u_native_images_debug.h  u_pacing.h  u_pacing.hpp  u_pacing_app.c  u_pacing_compositor.c  u_pacing_compositor_fake.c  u_sink_blob_visualizer.c  u_space_overseer.c  u_space_overseer.h  u_system.c  u_system_helpers.c
src/xrt/auxiliary/vive/: vive_common.c  vive_common.h  vive_config.c  vive_config.h  vive_poses.c
src/xrt/auxiliary/vk/: CMakeLists.txt  vk_bundle_init.c  vk_compositor_flags.c  vk_function_loaders.c  vk_generate_inc_files.py  vk_helpers.c  vk_helpers.h  vk_image_allocator.c  vk_image_allocator.h  vk_image_collection.c  vk_image_collection.h  vk_print.c  vk_surface_info.c  vk_surface_info.h  vk_sync_objects.c
src/xrt/base/: CMakeLists.txt  b_stub.c
src/xrt/compositor/: CMakeLists.txt
src/xrt/compositor/client/: CMakeLists.txt  comp_d3d11_client.cpp  comp_d3d12_client.cpp  comp_gl_client.c  comp_gl_eglimage_swapchain.c  comp_gl_memobj_swapchain.c  comp_metal_client.m  comp_metal_glue.m  comp_vk_client.c  comp_vk_client.h  comp_vk_glue.c
src/xrt/compositor/main/: comp_compositor.c  comp_compositor.h  comp_main_interface.h  comp_renderer.c  comp_renderer.h  comp_settings.c  comp_settings.h  comp_target.h  comp_target_direct_windows.cpp  comp_target_direct_windows_swapchain.cpp  comp_target_direct_windows_swapchain.hpp  comp_target_swapchain.c  comp_target_swapchain.h  comp_window_android.c  comp_window_debug_image.c  comp_window_direct_nvidia.c  comp_window_direct_randr.c  comp_window_direct_wayland.c  comp_window_mswin.c  comp_window_peek.c  comp_window_peek.h  comp_window_wayland.c  (+2 more)
src/xrt/drivers/: CMakeLists.txt
src/xrt/ipc/: CMakeLists.txt
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_action.c  oxr_api_body_tracking.c  oxr_api_funcs.h  oxr_api_instance.c  oxr_api_negotiate.c  oxr_api_session.c  oxr_api_swapchain.c  oxr_api_system.c  oxr_api_verify.h  oxr_body_tracking.c  oxr_conversions.h  oxr_extension_support.h  oxr_haptic.c  oxr_haptic.h  oxr_input.c  oxr_instance.c  oxr_logger.c  oxr_objects.h  oxr_session.c  oxr_session_frame_end.c  oxr_session_gfx_metal.m  oxr_session_gfx_vk.c  oxr_swapchain.c  oxr_swapchain_metal.m  oxr_system.c  oxr_verify.c  oxr_verify_layers.c  oxr_vulkan.c
src/xrt/state_trackers/oxr/actions/: oxr_api_action.c  oxr_api_nv_action_context.c  oxr_api_nv_action_context.h  oxr_binding.c  oxr_binding.h  oxr_input.c  oxr_input.h  oxr_nv_action_context.c  oxr_nv_action_context.h  oxr_session_action_context.c  oxr_session_action_context.h
src/xrt/state_trackers/oxr/common/: oxr_defines.h  oxr_forward_declarations.h
src/xrt/state_trackers/oxr/extension_support/: oxr_extension_support.py
src/xrt/state_trackers/oxr/oxr_bindings/: oxr_bindings.py
src/xrt/state_trackers/oxr/path/: oxr_path_store.c  oxr_path_store.h  oxr_path_wrappers.h
src/xrt/targets/: CMakeLists.txt
src/xrt/targets/broker/: CMakeLists.txt  broker.plist.in  main.c  org.monado.compositor.plist
src/xrt/tracking/: CMakeLists.txt
src/xrt/tracking/constellation/: CMakeLists.txt  correspondence_search.c  correspondence_search.h  led_search_model.c  led_search_model.h  pose_metrics.c  pose_metrics.h  pose_optimize.cpp  t_constellation_tracker.cpp
tests/: CMakeLists.txt  tests_algorithms.cpp  tests_comp_client_vulkan.cpp  tests_cxx_wrappers.cpp  tests_pacing.cpp  vktest_init_bundle.hpp
(+208 files in other folders)
